--- a/02 Jupyter Notebook/02 Jupyter Notebook Presentation 2 -- Adding Style and Formatting to Markdown Text .ipynb
+++ b/02 Jupyter Notebook/02 Jupyter Notebook Presentation 2 -- Adding Style and Formatting to Markdown Text .ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a41440e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "a9e1a1ef",
    "metadata": {},
@@ -745,7 +753,7 @@
    "id": "08b10a8d",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-success\"><b>Example:</b>  In the cell below, add an image of a Green Bay Packers logo.\n",
+    "#### <div class=\"alert alert-block alert-success\"><b>Example:</b>  In the cell below, add an image of a Green Bay Packers logo.\n",
     "<p>&ensp;</p> </div>"
    ]
   },
